--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,9 +8,10 @@ dependencies = [
     "agno==1.5.1",
     "duckduckgo-search>=8.0.2",
     "fastapi[standard]>=0.115.12",
-    "openai>=1.79.0",
+    "openai>=1.81.0",
     "pypdf>=5.5.0",
     "qdrant-client>=1.14.2",
+    "sqlalchemy>=2.0.41",
     "yfinance>=0.2.61",
 ]
 
